# serializer version: 1
# name: TestFeatureDepOptional.test_feature_spec_version_changes_when_optional_changes
  dict({
    'optional': 'bed457f455c1ed9ccec4bb670a296cf0c0818990ef562fd4f517db7c7b165727',
    'required': '17ccc0af1d149804290c6137a27f78df54087c92ed40f1a9c05efd941afa0ceb',
  })
# ---
# name: TestFeatureDepOptional.test_optional_false_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': False,
    'rename': None,
    'sql_filters': None,
  })
# ---
# name: TestFeatureDepOptional.test_optional_true_serializes_correctly
  dict({
    'columns': None,
    'feature': 'test/feature',
    'fields_mapping': dict({
      'mapping': dict({
        'exclude_fields': list([
        ]),
        'match_suffix': False,
        'type': 'default',
      }),
    }),
    'lineage': dict({
      'relationship': dict({
        'type': '1:1',
      }),
    }),
    'optional': True,
    'rename': None,
    'sql_filters': None,
  })
# ---
